# ai-compliance-policy-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app_entry.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: audit.py  compliance_checker.py  config.py  database.py  generator.py  llm_service.py  main.py  models.py  questionnaire.py  rag_service.py
regulatory_data/: acl_ai_obligations.md  ai6_practices.md  ai_ethics_principles.md  anti_discrimination_ai.md  copyright_act_ai.md  corporations_act_duties.md  cross_border_app8.md  cyber_security_act_2024.md  oaic_guidance.md  pola_act_2024.md  privacy_act_apps.md  shadow_ai_risks.md
streamlit_app/: app.py
streamlit_app/components/: sidebar.py  theme.py
streamlit_app/pages/: 1_questionnaire.py  2_generate.py  3_policies.py  4_compliance.py  5_audit_log.py  6_compare.py  7_actions.py  8_shadow_ai.py
templates/jinja2/: ai_acceptable_use.j2  ai_data_retention.j2  ai_ethics_framework.j2  ai_procurement.j2  ai_risk_register.j2  ai_supply_chain_audit.j2  ai_tool_approval.j2  ai_transparency_statement.j2  bias_audit_procedure.j2  board_ai_briefing.j2  copyright_ip_policy.j2  data_classification.j2  employee_ai_training.j2  essential_eight_ai.j2  incident_response.j2  privacy_policy.j2  remediation_action_plan.j2  shadow_ai_playbook.j2  statutory_tort_defence.j2  tranche2_readiness.j2  vendor_risk_assessment.j2
tests/: test_api.py  test_compliance.py  test_generator.py  test_llm_service.py  test_questionnaire.py
